Added YT playlist

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Mine</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/videoseries?controls=0&amp;list=PLaRnM18YrqarXSRVC7Y3VQbEccCHqJ4b_" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+    </iframe>
 </body>
 </html>
