--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 <body>
     <iframe 
         width="560" 
-        height="315" 
-        src="https://www.youtube.com/embed/videoseries?controls=0&amp;list=PLaRnM18YrqarXSRVC7Y3VQbEccCHqJ4b_" 
+        height="315"
+        src="https://www.youtube.com/embed/videoseries?controls=0&amp;list=PLaRnM18YrqarXSRVC7Y3VQbEccCHqJ4b_&autoplay=1&loop=1" 
         frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
+        allow="autoplay">
     </iframe>
 </body>
 </html>
